update twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ theme:
   stack_exchange:  # Full URL
   steam:
   tumblr:
-  twitter: "twitter"
+  twitter: "@eliotmcintire"
   wordpress:
   youtube:
 
