--- a/_config.yml
+++ b/_config.yml
@@ -64,4 +64,4 @@ sass:
   sass_dir: _sass
   style: :compressed
 
-exclude: ["_posts/*.Rmd", "_posts/*.html"]
+exclude: ["_posts/*.Rmd", "_posts/*.html", "_posts/.Rhistory"]
