--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ theme:
 
   # Scripts
   google_analytics: "UA-58633549-2" # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname:
+  disqus_shortname: "predictiveecologyorg"
   katex: true # Enable if using math markup
 
   # Localization strings
