--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,8 @@ paginate: 5
 paginate_path: "blog/page:num"
 
 # BUILD SETTINGS
+gems:
+  - jekyll-redirect-from
 markdown: redcarpet
 highlighter: pygments
 sass:
