update @eliotmcintire email address

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ theme:
 
   # Icons
   rss: false
-  email_address: "eliot.mcintire@nrcan.gc.ca" # Full email address, e.g. "sam@example.com"
+  email_address: "eliot.mcintire@canada.ca" # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
