--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ theme:
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
   google_fonts: "Source+Sans+Pro:400,700,700italic,400italic"
-  
+
   # Post navigation
   post_navigation: false
 
@@ -63,6 +63,7 @@ paginate_path: "blog/page:num"
 
 # BUILD SETTINGS
 gems:
+  - jekyll-paginate
   - jekyll-redirect-from
 markdown: redcarpet
 highlighter: pygments
