use kramdown for markdown preprocessing
per GitHub, on kramdown will be supported as of May 1, 2016

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ paginate_path: "blog/page:num"
 gems:
   - jekyll-paginate
   - jekyll-redirect-from
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 sass:
   sass_dir: _sass
