--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ gems:
   - jekyll-paginate
   - jekyll-redirect-from
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: :compressed
