--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ theme:
   header_text: >
     <p>A blog about prediction in ecology: the science, the complexity and the computation</p>
   footer_text: >
-    This blog is maintained by Eliot McIntire, a research scientist with the Government of Canada.<br/>All content is his own or that of contributors ("the lab"), and does not necessarily reflect any official policy of the Government of Canada.<br/><small>Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a></small>
+    This blog is maintained by Eliot McIntire, a research scientist, and Alex Chubaty, a post doc, both working with the Government of Canada.<br/>All content is his own or that of contributors ("the lab"), and does not necessarily reflect any official policy of the Government of Canada.<br/><small>Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a></small>
 
   # Icons
   rss: false
-  email_address: "eliot.mcintire@canada.ca" # Full email address, e.g. "sam@example.com"
+  email_address: "eliot.mcintire@canada.ca" # Full email address, 
   behance:
   bitbucket:
   dribbble:
@@ -65,6 +65,7 @@ paginate_path: "blog/page:num"
 gems:
   - jekyll-paginate
   - jekyll-redirect-from
+  - jekyll-feed
 markdown: kramdown
 highlighter: rouge
 sass:
