--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ paginate: 5
 paginate_path: "blog/page:num"
 
 # BUILD SETTINGS
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-redirect-from
 markdown: kramdown
