--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ project:
 
 website:
   title: "PEWebsite"
-  description: "The Predictive Ecology Lab website"
+  description: "The Predictive Ecology Community website"
   favicon: "assets/logo/favicon-32x32.png"
   navbar:
     logo: "assets/logo/favicon-196x196.png"
@@ -27,7 +27,7 @@ website:
         href: https://twitter.com/PredictiveEcol
   page-footer:
     left:
-      - text: "This blog is maintained by Dr. Eliot McIntire, a research scientist with the Government of Canada, and Dr. Alex Chubaty. All content is his own or that of contributors ('the lab'), and does not necessarily reflect any official policy of the Government of Canada. Powered by Quarto"
+      - text: "This blog is maintained by Dr. Eliot McIntire, with contributions by Alex Chubaty, Ceres Barros, and Tati Micheletti. Powered by Quarto"
   sidebar:
     logo: "assets/logo/favicon-196x196.png"
   comments:
