--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,7 +41,7 @@ format:
     theme:
       light: flatly
       dark: darkly
-    css: assets/css/main.css
+    css: assets/css/main.scss
     smooth-scroll: true
     link-external-newwindow: true
 
