suppress "About" in webpage title - keep in navbar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,8 @@ website:
     right:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About
       - SpaDES.qmd
       - Workshops.qmd
       - publications.qmd
