--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ website:
         href: https://twitter.com/PredictiveEcol
   page-footer:
     left:
-      - text: "This site is maintained by Dr. Eliot McIntire and Ceres Barros, with contributions by Alex Chubaty, Tati Micheletti and others. Powered by Quarto"
+      - text: "This site is maintained by E. McIntire and C. Barros, with contributions by A. Chubaty, T. Micheletti and others. Powered by Quarto"
   sidebar:
     logo: "assets/logo/favicon-196x196.png"
   comments:
