--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ website:
         text: About
       - SpaDES.qmd
       - Workshops.qmd
+      - Training.qmd
       - Manuals.qmd
       - publications.qmd
       - presentations.qmd
