--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,11 +14,10 @@ website:
     search: true
     right:
       - href: index.qmd
-        text: News
-      - href: about.qmd
-        text: About
-      - href: Projects.qmd
-        text: Projects
+      - text: "About"
+        href: about.qmd
+      - text: "Projects"
+        href: Projects.qmd
       - SpaDES.qmd
       - Workshops.qmd
       - Training.qmd
