New Module is a section

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -10,6 +10,9 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
+    - part: NewModule.qmd
+      chapters:
+      - NewModuleIntro.qmd
     - part: realexamples.qmd
       chapters:
       - castorExample.qmd
