--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -25,6 +25,8 @@ format:
     theme:
       light: flatly
       dark: darkly
+    grid:
+      sidebar-width: 350px
     css: assets/css/main.scss
     smooth-scroll: true
     link-external-newwindow: true
