--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -1,5 +1,8 @@
 project:
   type: book
+  render:
+    - "*.qmd"
+    - "!castorExample.qmd"
 
 book:
   title: "Robust and nimble scientific workflows, using SpaDES"
