simInit.qmd; updates to scheduling.qmd, newMOduleIntro.qmd

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -51,9 +51,9 @@ book:
     - part: NewModule.qmd
       chapters:
       - NewModuleIntro.qmd
+      - Scheduling.qmd
+      - simList.qmd
     - part: realexamples.qmd
-      chapters:
-      - castorExample.qmd
     - references.qmd
 
 bibliography: references/references.bib
