author full names

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -4,8 +4,8 @@ project:
 book:
   title: "Robust and nimble scientific workflows, using SpaDES"
   author:
-    - "E. McIntire"
-    - "C. Barros"
+    - "Eliot McIntire"
+    - "Ceres Barros"
   date: last-modified
   cover-image: assets/logo/predictive_ecology_logo.png
   favicon:  assets/logo/favicon-16x16.png
