--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -52,6 +52,8 @@ book:
       - simList.qmd
       - ModulesAndEvents.qmd
     - part: realexamples.qmd
+      chapters:
+      - castorExample.qmd
     - references.qmd
 
 bibliography: references/references.bib
