make new section with new .qmds in book

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -52,6 +52,10 @@ book:
       - Scheduling.qmd
       - simList.qmd
       - ModuleInputs.qmd
+    - part: SpaDESworkflows.qmd
+      chapters:
+      - multipleModules.qmd
+      - setupProject.qmd
     - part: realexamples.qmd
       chapters:
       - castorExample.qmd
