--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -86,4 +86,10 @@ execute:
   freeze: auto
   cache: true
 
+editor:
+  mode: visual
+  markdown:
+    wrap: 72
+    references:
+      location: document
 
