Caching to the book; SystemSetup

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -52,6 +52,7 @@ book:
       - Scheduling.qmd
       - simList.qmd
       - ModuleInputs.qmd
+      - Caching.qmd
     - part: SpaDESworkflows.qmd
       chapters:
       - multipleModules.qmd
