--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -48,7 +48,7 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
-    - part: settingUp.qmd
+    - part: Setting up computer
       chapters:
       - installRandSpatialPkgs.qmd
       - PackagesForBook.qmd
