pre-render.R - install pkgs in proj lib

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -3,6 +3,8 @@ project:
   preview:
     port: 4200
     browser: false
+  pre-render:
+    - R/installpkgs.R
 
 book:
   title: "Robust and nimble scientific workflows, using SpaDES"
