use settingUp.qmd for section

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -50,7 +50,7 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
-    - part: Setting up computer
+    - part: settingUp.qmd
       chapters:
       - installRandSpatialPkgs.qmd
       - PackagesForBook.qmd
