installPkgs.R updates -- mirror needs to be general

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -68,8 +68,8 @@ book:
       - multipleModules.qmd
       # - setupProject.qmd
     - part: realexamples.qmd
-      # chapters:
-      # - castorExample.qmd
+      chapters:
+      - castorExample.qmd
     - bestPractices.qmd
     - references.qmd
 
