--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -66,7 +66,7 @@ book:
     - part: SpaDESworkflows.qmd
       chapters:
       - multipleModules.qmd
-      # - setupProject.qmd
+      - setupProject.qmd
     - part: realexamples.qmd
       chapters:
       - castorExample.qmd
