--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,9 +42,11 @@ jobs:
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages:
+            any::httr
             any::knitr
             any::quarto
             any::rmarkdown
+            any::terra ## must be here, won't work from r setup script
 
       - name: Build site 🔧
         run: Rscript R/renderCopyBook.R
