--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -65,6 +65,8 @@ book:
       - Caching.qmd
     - part: setupProject.qmd
       chapters:
+      - workflowSimple1.qmd
+      - workflowSimple2.qmd
       - multipleModules.qmd
     - part: realexamples.qmd
       chapters:
