MetaDataAndModuleFiles renamed from workflowSimple1

--- a/training/tutos/NewModuleIntro/NewModule/My_linear_model/.github/.gitignore
+++ b/training/tutos/NewModuleIntro/NewModule/My_linear_model/.github/.gitignore
@@ -2,3 +2,43 @@
 
 *.html
 
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
+*.html
+
