--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -60,6 +60,7 @@ book:
     - part: SpaDESbasics.qmd
       chapters:
       - NewModuleIntro.qmd
+      - MetaDataAndModuleFiles.qmd
       - ModulesAndEvents.qmd
       - Scheduling.qmd
       - simList.qmd
@@ -67,7 +68,6 @@ book:
       - Caching.qmd
     - part: setupProject.qmd
       chapters:
-      # - workflowSimple1.qmd
       - workflowSimple2.qmd
       - multipleModules.qmd
       - castorExample.qmd
