ForestsAndFires.qmd into main

--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -71,6 +71,7 @@ book:
       - workflowSimple2.qmd
       - multipleModules.qmd
       - castorExample.qmd
+      - ForestsAndFires.qmd
     - bestPractices.qmd
     - references.qmd
 
