--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -61,17 +61,20 @@ book:
       chapters:
       - NewModuleIntro.qmd
       - MetaDataAndModuleFiles.qmd
+      - ModuleInputs.qmd
+      - simList.qmd
       - ModulesAndEvents.qmd
       - Scheduling.qmd
-      - simList.qmd
-      - ModuleInputs.qmd
+    - part: ContinuousWorkflows.qmd
+      chapters:
       - Caching.qmd
+      # - prepInputs.qmd
     - part: setupProject.qmd
       chapters:
       - workflowSimple2.qmd
       - multipleModules.qmd
-      - castorExample.qmd
       - ForestsAndFire.qmd
+      - castorExample.qmd
     - bestPractices.qmd
     - references.qmd
 
