--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -69,10 +69,12 @@ book:
       chapters:
       - Caching.qmd
       # - prepInputs.qmd
+      # - debugging.qmd
     - part: setupProject.qmd
       chapters:
       - workflowSimple2.qmd
       - multipleModules.qmd
+      # - LandRDemo_coreVeg.qmd
       - ForestsAndFire.qmd
       - castorExample.qmd
     - bestPractices.qmd
