--- a/training/_quarto.yml
+++ b/training/_quarto.yml
@@ -73,7 +73,7 @@ book:
     - part: setupProject.qmd
       chapters:
       - workflowSimple2.qmd
-      - multipleModules.qmd
+      # - multipleModules.qmd
       - LandRDemo_coreVeg.qmd
       - ForestsAndFire.qmd
       - castorExample.qmd
