--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,9 +38,7 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with:
-          extra-repositories:
-            http://cran.r-project.org
-            https://predictiveecology.r-universe.dev
+          extra-repositories: http://cran.r-project.org
 
       - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
