--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,8 +46,8 @@ jobs:
             any::knitr
             any::quarto
             any::rmarkdown
-            any::igraph ## must be here, won't work from r setup script
-            any::terra ## must be here, won't work from r setup script
+            any::terra ## must be here, won't work from r setup script -- linux deps?
+            any::igraph
 
       - name: Build site 🔧
         run: Rscript R/renderCopyBook.R
