--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,8 +46,7 @@ jobs:
             any::knitr
             any::quarto
             any::rmarkdown
-            any::terra ## must be here, won't work from r setup script -- linux deps?
-            any::igraph
+            any::terra
 
       - name: Build site 🔧
         run: Rscript R/renderCopyBook.R
