--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,10 @@ jobs:
         with:
           version: 1.3.450
 
+      - name: Install units
+        if: runner.os == 'ubuntu'
+        run: sudo apt-get install libudunits2-dev
+
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
