--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
           version: 1.3.450
 
       - name: Install units
-        if: runner.os == 'ubuntu-latest'
+        if: runner.os == 'Linux'
         run: sudo apt-get install libudunits2-dev
 
       - name: Set up R
