--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install units
         if: runner.os == 'Linux'
-        run: sudo apt-get install libudunits2-dev
+        run: sudo apt-get install libudunits2-dev libarchive-dev
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
