--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,8 @@ website:
           - Workshops.qmd
           - text: "June 2024 Workshop Agenda"
             href: workshops/June-2024-SpaDES-workshop.qmd
+          - text: "November 2024 Workshop Agenda"
+            href: workshops/Nov-2024-SpaDES-workshop.qmd
       - text: "Training"
         menu:
           - text: "Training Book"
